tests/toylang/neg/000663_mutation.toylang
program a = { a = a do + a; } .
